--- a/2.html
+++ b/2.html
@@ -87,3 +87,25 @@ HTML & CSS
 		</p>
 </ol>
 
+<h2> <li> LIST  </li> </h2>
+<ol>
+	<li>
+	
+		ordened
+		<ol>
+			<li>element1</li>
+			<li>element2</li>
+		</ol>
+		
+	</li>
+	
+	<li>
+		unordened
+		<ul>
+			<li>element1</li>
+			<li>element2</li>
+		</ul>
+	</li>
+</ol>
+
+
