--- a/html&css notes/3.html
+++ b/html&css notes/3.html
@@ -21,7 +21,7 @@ HTML5 & CSS
 	
 		<form action="/url-submit-data">
 			<input type="text" placeholder="must write muajaja" required>
-			<buttom type="submit" this submits the form^^ >
+			<button type="submit"  > this submits the form^^</button>
 		</form>
 		
 	</li>
@@ -86,8 +86,7 @@ HTML5 & CSS
 		<form action="/url-submit-data" id="best-form"> 
 			hihi ^^
 			<div>
-				<button type="submit">
-				<p> this submit the from </p>
+				<button type="submit"> submit form :O</button>
 			</div>
 		</form>
 		
