arreglado algun error y condigo organizado

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,9 +1,9 @@
+BOOTSTRAP
+
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 
-
-<div class="container-fluid">
-<h1> fluid containers </h1>
-<ul>
+<h2> <li> fluid containers, image, text </li> </h2>
+<ol>
 	<li>
 		container-fluid
 		<div class="container-fluid">
@@ -22,9 +22,15 @@
 	
 	<li>
 		text-center
-		<h2 class="another-class text-center"> ^^ </h2>
+		<p> p without txt center </p>
+		<p class="txt-center"> p with txt center </p>
 	</li>
 
+</ol>
+
+
+<h2> <li> buttons :O </li> </h2> 
+<ol>
 	<li>
 		bootstrap button with class btn
 		<button type="submit" class="btn">
@@ -46,14 +52,11 @@
 	</li>
 	
 	<li>
-		button color rainbow
+		button color rainbow...
 	</li>
 	
 	<li>
-		button info
+		button info...
 	</li>
-</ul>
 
-</div>
-
-
+</ol>
