--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,8 +1,12 @@
-BOOTSTRAP
+
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<h2> <li> fluid containers, image, text </li> </h2>
+<div class="container-fluid">
+BOOTSTRAP
+
+
+<h2> <li> FUILD CONTAINER, IMAGE AND TEXT </li> </h2>
 <ol>
 	<li>
 		container-fluid
@@ -29,10 +33,10 @@ BOOTSTRAP
 </ol>
 
 
-<h2> <li> buttons :O </li> </h2> 
+<h2> <li> BUTTON </li> </h2> 
 <ol>
 	<li>
-		bootstrap button with class btn
+		<p>bootstrap button with class btn </p>
 		<button type="submit" class="btn">
 			Like
 		</button>
@@ -52,11 +56,34 @@ BOOTSTRAP
 	</li>
 	
 	<li>
-		button color rainbow...
+		button color rainbow: btn-primary
+		<p> es al clase principal que se usará en la app</p>
+		<button class="btn btn-block btn-primary">Submit</button>
 	</li>
 	
 	<li>
-		button info...
+		button info btn-info
+		<p> llamar la atencion a acciones opcionales que pueden tomar </p>
+		 <button class="btn btn-block btn-info"> Info </button>
+	</li>
+	
+	<li>
+		<p> button danger action btn-danger </p>
+		<button class="btn btn-block btn-danger"> Delete </button>
 	</li>
 
 </ol>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
