--- a/bootstrap/bootstrap2.html
+++ b/bootstrap/bootstrap2.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 crossorigin="anonymous">
+<script src="https://use.fontawesome.com/52207675ad.js"></script>
+
 
 
 BOOTSTRAP(2)
@@ -58,9 +60,58 @@ BOOTSTRAP(2)
 	</li>
 	
 </ol>
+</div>
+
+
+<h2> <li> awesome font </li> </h2>
+
+<div class="container-fluid">
+<ol>
+
+	<li>
+		font awesome
+		<p> is a library of icons, stored in .svg format</p>
+		<p> i elements now are used for icons </p>
+		<p> fa fa-info-circle </p>
 	
+		<button class="btn btn-block btn-primary">
+			<i class="fa fa-thumbs-up"> </i>
+			Like
+		</button>
+		
+		<button class=" btn btn-block btn-primary">
+			<i class="fa fa-trash"> </i>
+			Delete
+		</button>
+
+		<button class=" btn btn-block btn-primary">
+			<i class="fa fa-info-circle"> </i>
+			Info
+		</button>
+		
+	</li>
+	
+	<li>
+	
+	</li>
+
+</ol>
+</div>
+
+
+<h2> <li> radiobuttons and checkboxes </li> </h2>
+
+<div class="container-fluid">
+
+<ol>
+
+</ol>
 
 </div>
+
+
+
+
 
 
 
