style radiobuttons and checkboxes

--- a/bootstrap/bootstrap2.html
+++ b/bootstrap/bootstrap2.html
@@ -99,18 +99,27 @@ BOOTSTRAP(2)
 </div>
 
 
-<h2> <li> radiobuttons and checkboxes </li> </h2>
+<h2> <li> responsible style radiobuttons and checkboxes </li> </h2>
 
 <div class="container-fluid">
 
 <ol>
+	<li>
+		style radiobuttons and checkboxes with col-xs-*
+	    <div class="row">
+		 
+		 <div class="col-xs-6">
+	    <label><input type="radio" name="indoor-outdoor"> Indoor</label>
+		 </div>
+		 <div class="col-xs-6">
+	    <label><input type="checkbox" name="indoor-outdoor"> Outdoor</label>
+		 </div>
+	    </div>
 
+	</li>
 </ol>
 
 </div>
-
-
-
 
 
 
